# pandas-ai

./: pyproject.toml  requirements.txt
pandas_ai/: main.py
